# libsdp

./: .gitignore  .gitmodules  README.md
include/: candidate.h  capability.h  codecinfo.h  direction.h  directionway.h  dtlsinfo.h  iceinfo.h  jsonserialize.h  mediainfo.h  ridinfo.h  rtcpfeedbackinfo.h  sdpinfo.cpp  sdpinfo.h  sdpinfo_test.h  sdpstruct.h  setup.h  simulcastinfo.h  simulcaststreaminfo.h  sourcegroupinfo.h  sourceinfo.h  streaminfo.h  stringUtil.h  trackencodinginfo.h  trackinfo.h  utils.h
src/: sdpinfo.cpp  stringUtil.cpp
test/: CMakeLists.txt  Makefile  TestSdp.cpp  main.cpp  testsdp
test/data/: aes67.sdp
wrapper/: Makefile  libsdp.i  test.java
